--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "rokaloko-services",
   "repository": {
     "type": "git",
-		"url": "https://github.com/pkokki/rokaloko-services.git"
+    "url": "https://github.com/pkokki/rokaloko-services.git"
   },
-	"bugs": {
-		"url": "https://github.com/pkokki/rokaloko-services/issues"
-	},
-	"homepage": "https://github.com/pkokki/rokaloko-services",
+  "bugs": {
+    "url": "https://github.com/pkokki/rokaloko-services/issues"
+  },
+  "homepage": "https://github.com/pkokki/rokaloko-services",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -19,7 +19,9 @@
   "author": "pkokki",
   "license": "MIT",
   "dependencies": {
+    "boom": "^7.3.0",
     "hapi": "^17.8.1",
+    "joi": "^14.3.0",
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10"
   },
@@ -38,6 +40,7 @@
     "gulp-tslint": "^8.1.3",
     "gulp-typescript": "^5.0.0",
     "gulp-util": "^3.0.8",
+    "gulplog": "^1.0.0",
     "mocha": "^5.2.0",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
